{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 15,
  "lineage": "16b8680e-db2b-0851-fa00-0433e0aab88e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "devoteam-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/zones/europe-west1-c/instanceGroups/instance-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-04-10T04:04:40.918-07:00",
            "enable_cdn": false,
            "fingerprint": "31thzrF2hPE=",
            "generated_id": -1195651929,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/healthChecks/health-check"
            ],
            "id": "projects/cloud-internship-aerdeljan/global/backendServices/load-balancer",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "load-balancer",
            "port_name": "http",
            "project": "cloud-internship-aerdeljan",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/backendServices/load-balancer",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.devoteam-health-check",
            "google_compute_instance_group_manager.devoteam-vm-group",
            "google_compute_instance_template.devoteam-vm",
            "google_compute_network.project_vpc",
            "google_compute_subnetwork.project_subnet_us_central"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "3000",
                  "3001",
                  "3002",
                  "3003",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-04-10T04:03:42.891-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloud-internship-aerdeljan/global/firewalls/firewall",
            "log_config": [],
            "name": "firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/networks/networkk",
            "priority": 1000,
            "project": "cloud-internship-aerdeljan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/firewalls/firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cloud-internship-aerdeljan/global/forwardingRules/content-rule",
            "ip_address": "35.244.220.82",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "content-rule",
            "port_range": "3000-3000",
            "project": "cloud-internship-aerdeljan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/forwardingRules/content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/targetHttpProxies/proxy-mapper"
          },
          "dependencies": [
            "google_compute_backend_service.devoteam-load-balancer",
            "google_compute_health_check.devoteam-health-check",
            "google_compute_instance_group_manager.devoteam-vm-group",
            "google_compute_instance_template.devoteam-vm",
            "google_compute_network.project_vpc",
            "google_compute_subnetwork.project_subnet_us_central",
            "google_compute_target_http_proxy.proxy",
            "google_compute_url_map.url-mapper"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cloud-internship-aerdeljan/global/networks/networkk",
            "mtu": 0,
            "name": "networkk",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8805096449285803068",
            "project": "cloud-internship-aerdeljan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/networks/networkk"
          },
          "create_before_destroy": true
        },
        {
          "deposed": "aaae681d",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cloud-internship-aerdeljan/global/networks/network",
            "mtu": 0,
            "name": "network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "948311443273141484",
            "project": "cloud-internship-aerdeljan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/networks/network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "project_subnet_us_central",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-10T04:03:43.494-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/cloud-internship-aerdeljan/regions/europe-west1/subnetworks/subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/networks/network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cloud-internship-aerdeljan",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/regions/europe-west1/subnetworks/subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-10T04:05:26.191-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/cloud-internship-aerdeljan/global/targetHttpProxies/proxy-mapper",
            "name": "proxy-mapper",
            "project": "cloud-internship-aerdeljan",
            "proxy_bind": false,
            "proxy_id": -1195651943,
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/targetHttpProxies/proxy-mapper",
            "url_map": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/urlMaps/http-mapping"
          },
          "dependencies": [
            "google_compute_backend_service.devoteam-load-balancer",
            "google_compute_health_check.devoteam-health-check",
            "google_compute_instance_group_manager.devoteam-vm-group",
            "google_compute_instance_template.devoteam-vm",
            "google_compute_network.project_vpc",
            "google_compute_subnetwork.project_subnet_us_central",
            "google_compute_url_map.url-mapper"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url-mapper",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-10T04:05:14.340-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/backendServices/load-balancer",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Sp2JwykMZ3g=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cloud-internship-aerdeljan/global/urlMaps/http-mapping",
            "map_id": -1195651962,
            "name": "http-mapping",
            "path_matcher": [],
            "project": "cloud-internship-aerdeljan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-internship-aerdeljan/global/urlMaps/http-mapping",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.devoteam-load-balancer",
            "google_compute_health_check.devoteam-health-check",
            "google_compute_instance_group_manager.devoteam-vm-group",
            "google_compute_instance_template.devoteam-vm",
            "google_compute_network.project_vpc",
            "google_compute_subnetwork.project_subnet_us_central"
          ]
        }
      ]
    }
  ]
}